# private-markets-solana

./: .gitignore  ARCHITECTURE.md  Anchor.toml  FEATURES.md  PITCH.md  PITCH2.md  README.md  pnp-sdk-reference.md  pnpm-lock.yaml  vercel.json
apps/api/: .env.example  PNP_SDK_FINDINGS.md  package-lock.json  package.json
apps/api/scripts/: create-market-custom-oracle.ts  create-market-usdc.ts  create-v2-amm-market.ts  explore-pnp-markets.ts  pnp-v3-market.ts  test-pnp-debug.ts  test-pnp-mainnet.ts  test-pnp-sdk.ts
apps/api/src/: index.ts
apps/api/src/routes/: darkMarkets.ts  markets.ts  orderbook.ts  trading.ts
apps/api/src/scripts/: create-dark-markets-v3.ts  create-dark-markets.ts  create-tradeable-markets.ts  setup-dac-complete.ts
apps/api/src/services/: darkMarkets.ts  marketTracker.ts  orderbook.ts  pnp.ts
apps/web/: .npmrc  next.config.js  package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx  wallet-provider.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/docs/: layout.tsx  page.tsx
apps/web/src/app/markets/: page.tsx
apps/web/src/app/orderbook/: page.tsx
apps/web/src/app/portfolio/: page.tsx
apps/web/src/app/unwrap/: page.tsx
apps/web/src/components/: CreateMarketModal.tsx  MarketCard.tsx  Navbar.tsx  PhantomWalletButton.tsx  TradePanel.tsx
apps/web/src/lib/: api.ts  trading.ts
docs/: CONFIDENTIAL_PREDICTION_MARKETS_RESEARCH.md  INDEX.md  PNP_INTEGRATION.md
programs/dac-token/: Cargo.toml
programs/dac-token/src/: lib.rs
scripts/: create-dac-spl-mint.ts  create-dark-markets.ts
(+9 files in other folders)
