[package]
name = "dac-token"
version = "0.1.0"
description = "Dark Alpha Confidential Token - Privacy-preserving prediction market collateral"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dac_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
inco-lightning = { version = "0.1.4", features = ["cpi"] }
